# nodify

./: .gitignore  CONTEXT.md  CONVENTIONS.md  Cargo.toml  PLAN.md  PRD.md  README.en.md  README.md  SMOKE-TEST.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: core-ci.yml  frontend-ci.yml  release.yml
crates/nodify-adapters/: Cargo.toml
crates/nodify-adapters/examples/: scan.rs
crates/nodify-adapters/src/: claude.rs  codex.rs  kilocode.rs  lib.rs  opencode.rs  ops.rs  piagent.rs  util.rs
crates/nodify-adapters/tests/: parse_config.rs  parse_mcps.rs  parse_providers.rs  share_mcps.rs  write_mcps.rs
crates/nodify-core/: Cargo.toml
crates/nodify-core/src/: adapter.rs  lib.rs  mcp.rs  provider.rs  secret.rs  skill.rs  sync.rs
crates/nodify-io/: Cargo.toml
crates/nodify-io/src/: detect.rs  lib.rs  skills.rs  write.rs
docs/: canonical-model.md  design-system.md
docs/adapters/: claude-code.md  codex.md  opencode.md
docs/adr/: 0001-desktop-app-tauri.md  0002-editor-in-place-no-source-of-truth.md  0003-canonical-model-with-adapters.md  0004-secrets-passthrough-masked.md  0005-surgical-writes-preserve-unknown.md  0006-github-sync-canonical-bundle.md  0007-canonical-mcp-translation-rules.md
nodify-design-system/: .thumbnail  Nodify.dc.html  support.js
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mutate.rs  scan.rs
src/app/: agent-visibility-menu.tsx  app.tsx  dock-nav.tsx  globals.css  grid-background.tsx  logo.tsx  theme-store.ts  top-bar.tsx
src/components/: agent-glyph.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  status-indicator.tsx
src/features/agents/: agent-drawer.tsx  (+1 more)
src/i18n/: en.ts  es.ts  index.ts
src/lib/: agent-visibility.ts  agents.ts  mock.ts  tauri.ts  types.ts  utils.ts
(+10 files in other folders)
