[workspace]
resolver = "2"
members = [
    "crates/nodify-core",
    "crates/nodify-adapters",
    "crates/nodify-io",
]
# src-tauri se excluye a propósito: depende de webkit/GUI y rompería el `cargo test
# --workspace` del core en entornos sin display. Consume los crates por path.
exclude = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/leancore/nodify"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
toml_edit = "0.22"
jsonc-parser = { version = "0.26", features = ["serde"] }
