[package]
name = "nodify-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nodify-core = { path = "../nodify-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml_edit = { workspace = true }
jsonc-parser = { workspace = true }

[dev-dependencies]
nodify-io = { path = "../nodify-io" }
